--- a/styles/main.css
+++ b/styles/main.css
@@ -156,6 +156,59 @@ nav li:hover {
   border-radius: 50%;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
+/******* stying the about section***********/
+
+.about-section{
+  padding: 2em 6em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.about-section img{
+  width: 90%;
+  border-radius: 2em;
+  height: relative;
+  margin-right: 4em;
+  align-self: center;
+}
+
+.about-section h1{
+
+  font-size: xx-large;
+  margin-right: 1em;
+}
+.about-section progress{
+ width: 60%;
+}
+.skills-resume{
+  padding: 1em 1em;
+  background-color:#eef9ff;
+  border-radius: 1em;
+  color:#181718;
+}
+.other-skills{
+  width: 87.35%;
+  padding:2em 6em;
+  background-color: #eef9ff;
+}
+.other-skills .other-skills-spans {
+ 
+  display: flex;
+  flex-wrap: wrap;
+   font-size: smaller;
+ }
+ .other-skills span {
+   padding: 1em 1em;
+   background-color: #ffb11f;
+   border-radius: 10em;
+   margin: 0.4em;
+   width: auto;
+ }
+ 
+  .other-skills .random {
+   background-color: var(--primary-color);
+   color: white;
+ }
 
 /*****   styling the project section part***/
 
@@ -268,7 +321,7 @@ footer .footer-footer .contactme-form input {
   border-radius: 0.5em;
   margin-bottom: 1em;
 }
-
+/******* ***********/
 /*************using some media queries*********************************/
 
 @media (max-width: 600px){
