--- a/styles/main.css
+++ b/styles/main.css
@@ -170,6 +170,7 @@ nav li:hover {
   height: relative;
   margin-right: 4em;
   align-self: center;
+
 }
 
 .about-section h1{
@@ -209,9 +210,73 @@ nav li:hover {
    background-color: var(--primary-color);
    color: white;
  }
+/***************************** styling the services part********************/
 
+.my-services {
+  background-color:#eef9ff;
+  color:#181718;
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.my-services h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+.my-services p {
+  font-size: 1.2em;
+  margin-bottom: 40px;
+}
+
+.service-cards {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.service-card {
+  background-color:white;
+  color: black;
+  border-radius: 8px;
+  width: 24%;
+  margin: 2em;
+  padding: 2em;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: left;
+}
+
+.service-card img {
+  width: 100%;
+  height: 250px;
+  border: 7px solid #ffb11f;
+  margin-bottom: 15px;
+  
+  border-radius: 1em;
+}
+
+.service-card h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.service-card p {
+  font-size: 1em;
+  margin-bottom: 20px;
+}
+
+.service-card a {
+  color:#6463ff;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.service-card a:hover {
+  text-decoration: underline;
+}
 /*****   styling the project section part***/
 
+/*****************************my first projects********************************/
 .project-part h1 {
   color: var(--secondary-background);
   font-size: xx-large;
