--- a/styles/main.css
+++ b/styles/main.css
@@ -444,7 +444,9 @@ footer .footer-footer .contactme-form input {
     align-items: center;
     padding: 2em 2em;
   }
-
+  .about-section img{
+    width: 100%;
+  }
   .project-part {
     font-size: small;
   }
